--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
     "dev:server": "nodemon server/index.js",
     "dev:client": "npm --prefix client run dev",
-    "build": "npm --prefix client run build",
+    "build": "npm install --prefix client && npm --prefix client run build",
     "lint": "npm --prefix client run lint",
-    "start": "NODE_ENV=production node server/index.js"
+    "start": "NODE_ENV=production node server/index.js",
+    "postinstall": "npm install --prefix client"
   },
   "keywords": [],
   "author": "",
@@ -24,5 +25,13 @@
   "devDependencies": {
     "concurrently": "^9.2.1",
     "nodemon": "^3.1.11"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sectns/seckick.git"
+  },
+  "bugs": {
+    "url": "https://github.com/sectns/seckick/issues"
+  },
+  "homepage": "https://github.com/sectns/seckick#readme"
 }
